@@ -7,6 +7,7 @@ REST API
 
 * "/modalities/{id}/query": New argument "Normalize" can be set to "false"
   to bypass the automated correction of outgoing C-FIND queries
+* Reporting of "ParentResources" in "DicomModalityStore" and "DicomModalityStore" jobs
 
 Maintenance
 -----------
